# cookie-cutter

./: cookie-cutter.sh  cookie_cutter.sh  install.sh  uninstall.sh
c/: Makefile  configure.ac  rm_build_files.sh
c/src/: Makefile.am  argparse.h  configparse.c  configparse.h  main.c
c/tests/: Makefile.am  assert.c  assert.h  except.c  except.h  minunit.h  test1  test1.c  unit.c
flask/: start_frontend.sh
flask/app/templates/: index.html
map/: config.py  start_frontend.sh
map/app/: routes.py
map/app/templates/: index.html
python/: AUTHORS  __main__.py  setup.py
python/docs/source/: conf.py  index.rst
